link to stylesheets

--- a/CS601_HW2_Jones/spotlight.html
+++ b/CS601_HW2_Jones/spotlight.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html> <!--for html5-->
 
 <html lang="en"> <!--set language to english-->
-
   <head>
     <title>WolfTree</title> <!--shows up in browser title bar-->
-    <!--link to style sheet will go here-->
+    <!--link to CSS-->
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <link rel="stylesheet" type="text/css" media="print" href="print.css">
   </head>
 
   <body>
