--- a/CS601_HW2_Jones/about.html
+++ b/CS601_HW2_Jones/about.html
@@ -6,6 +6,8 @@
     <!--link to CSS-->
     <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
     <link rel="stylesheet" type="text/css" media="print" href="styles/print.css">
+    <!---Link to google fonts--->
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Raleway:300,400&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -14,26 +16,26 @@
     <nav class="navbar">  <!--will use css instead of align next week - just for vizual purposes today-->
       <a href="#" class="navbar__title" id="navbar__logo">WOLF TREE</a>
       <div id="navbar__menu">
-      <a class="navbar__link" href="about.html">ABOUT</a> |
-      <a class="navbar__link" href="menu.html">MENU</a> |
-      <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a> |
+      <a class="navbar__link" href="about.html">ABOUT</a>
+      <a class="navbar__link" href="menu.html">MENU</a>
+      <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a>
       <a class="navbar__link" href="findUs.html">FIND US</a>
       </div>
     </nav>
     </header>
 
 
-    <section>
+    <section class="music">
     <br> <!---just using to create some space till css is added-->
     <a href="https://www.instagram.com/wolftreevt/">Check us out on Instagram</a>  <!--external link-->
     <h4>What We are Listening To:<br>The Game by Milky Chance</h4>
     <audio controls src="audio/TheGame.mp3"></audio>
     </section>
 
-    <section>
+    <section class="intro">
       <h1>Wolf Tree</h1>
       <h2>The New Bar In Town</h2>
-    <img src="images/wolftree.jpeg" alt="picture of a wolf tree" width="700">
+    <!--<img class="intro__img" src="images/wolftree.jpeg" alt="picture of a wolf tree">-->
 
       <p> <!--paragraph 1-->
       A "wolf tree" is the lone tree that remains after most of the forest has been cleared for farming.
