--- a/CS601_HW2_Jones/findUs.html
+++ b/CS601_HW2_Jones/findUs.html
@@ -6,6 +6,8 @@
     <!--link to CSS-->
     <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
     <link rel="stylesheet" type="text/css" media="print" href="styles/print.css">
+    <!---Link to google fonts--->
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Raleway:300,400&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -13,9 +15,9 @@
     <nav class="navbar">  <!--will use css instead of align next week - just for vizual purposes today-->
       <a href="#" class="navbar__title" id="navbar__logo">WOLF TREE</a>
       <div id="navbar__menu">
-      <a class="navbar__link" href="about.html">ABOUT</a> |
-      <a class="navbar__link" href="menu.html">MENU</a> |
-      <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a> |
+      <a class="navbar__link" href="about.html">ABOUT</a>
+      <a class="navbar__link" href="menu.html">MENU</a>
+      <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a>
       <a class="navbar__link" href="findUs.html">FIND US</a>
       </div>
     </nav>
