work on nav bar and social icons

--- a/CS601_HW2_Jones/findUs.html
+++ b/CS601_HW2_Jones/findUs.html
@@ -12,15 +12,23 @@
 
   <body>
     <header> <!--Navigation Bar-->
-    <nav class="navbar">  <!--will use css instead of align next week - just for vizual purposes today-->
-      <a href="#" class="navbar__title" id="navbar__logo">WOLF TREE</a>
-      <div id="navbar__menu">
-      <a class="navbar__link" href="about.html">ABOUT</a>
-      <a class="navbar__link" href="menu.html">MENU</a>
-      <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a>
-      <a class="navbar__link" href="findUs.html">FIND US</a>
-      </div>
-    </nav>
+      <nav class="navbar">  <!--will use css instead of align next week - just for vizual purposes today-->
+        <div id="navbar__grid--center">
+        <a href="#" class="navbar__title">WOLF TREE</a>
+        <div>
+        <a class="navbar__link" href="about.html">ABOUT</a>
+        <a class="navbar__link" href="menu.html">MENU</a>
+        <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a>
+        <a class="navbar__link" href="findUs.html">FIND US</a>
+        </div>
+        </div>
+
+        <div id="navbar__grid--right">
+        <a href="https://www.instagram.com/wolftreevt/">
+          <img class="navbar__social" src="images/instagram.png" alt="instagram logo">
+        </a>
+        </div>
+      </nav>
     </header>
 
     <div>
@@ -67,7 +75,7 @@
         121 South Main Street,<br> White River Junction,<br> Vermont 05065
       </address>
       <h3>Give us a ring</h3>
-      <a href="tel:802-356-7860">802-356-7860</a>  <!--using a link for click to call-->
+      <a class="button" href="tel:802-356-7860">CALL US</a>  <!--using a link for click to call-->
 
     </div> <!--closing tags-->
 
