--- a/CS601_HW2_Jones/menu.html
+++ b/CS601_HW2_Jones/menu.html
@@ -12,15 +12,23 @@
 
   <body>
     <header> <!--Navigation Bar-->
-    <nav class="navbar">  <!--will use css instead of align next week - just for vizual purposes today-->
-      <a href="#" class="navbar__title" id="navbar__logo">WOLF TREE</a>
-      <div id="navbar__menu">
-      <a class="navbar__link" href="about.html">ABOUT</a>
-      <a class="navbar__link" href="menu.html">MENU</a>
-      <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a>
-      <a class="navbar__link" href="findUs.html">FIND US</a>
-      </div>
-    </nav>
+      <nav class="navbar">  <!--will use css instead of align next week - just for vizual purposes today-->
+        <div id="navbar__grid--center">
+        <a href="#" class="navbar__title">WOLF TREE</a>
+        <div>
+        <a class="navbar__link" href="about.html">ABOUT</a>
+        <a class="navbar__link" href="menu.html">MENU</a>
+        <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a>
+        <a class="navbar__link" href="findUs.html">FIND US</a>
+        </div>
+        </div>
+
+        <div id="navbar__grid--right">
+        <a href="https://www.instagram.com/wolftreevt/">
+          <img class="navbar__social" src="images/instagram.png" alt="instagram logo">
+        </a>
+        </div>
+      </nav>
     </header>
 
     <section> <!---trying out section instead of div-->
