--- a/CS601_HW2_Jones/about.html
+++ b/CS601_HW2_Jones/about.html
@@ -34,25 +34,21 @@
 
 
     <section class="music">
-    <br> <!---just using to create some space till css is added-->
-    <a href="https://www.instagram.com/wolftreevt/">Check us out on Instagram</a>  <!--external link-->
-    <h4>What We are Listening To:<br>The Game by Milky Chance</h4>
+    <h4>What We are Listening To:The Game by Milky Chance</h4>
     <audio controls src="audio/TheGame.mp3"></audio>
     </section>
 
     <section class="intro">
       <h1>Wolf Tree</h1>
       <h2>The New Bar In Town</h2>
-    <!--<img class="intro__img" src="images/wolftree.jpeg" alt="picture of a wolf tree">-->
-
       <p> <!--paragraph 1-->
       A "wolf tree" is the lone tree that remains after most of the forest has been cleared for farming.
       Livestock and other animals gather at such trees. The whole point of the bar, is as a love letter to Vermont and the Upper Valley.
       There are really dynamic, fun and unique flavors that exist in this region that people don't necessarily associate with cocktails,
       sumac as an example. Such ingredients will be used to infuse spirits or accompany spirits, to adulterate, showcase and highlight things for craft cocktails that are hopefully larger than the sum of their parts.
       So come around and join us at WolfTree.
-    </p>
-  </section>
+      </p>
+    </section>
 
     <footer> <!--footer-->
        <p>copyright	&copy; Paige Madeline Jones 2019</p>
