huzzah grid layout

--- a/CS601_HW2_Jones/about.html
+++ b/CS601_HW2_Jones/about.html
@@ -32,22 +32,22 @@
       </nav>
     </header>
 
-
-    <section class="music">
-    <h4>What We are Listening To:The Game by Milky Chance</h4>
-    <audio controls src="audio/TheGame.mp3"></audio>
-    </section>
-
     <section class="intro">
-      <h1>Wolf Tree</h1>
-      <h2>The New Bar In Town</h2>
-      <p> <!--paragraph 1-->
+      <h1 id="intro__grid--top">The New Bar In Town</h1>
+      <a class="button" id="intro__grid--bottom" href="tel:802-356-7860">ORIGIN STORY</a>  <!--using a link for click to call-->
+<!--paragraph 1
+      <p>
       A "wolf tree" is the lone tree that remains after most of the forest has been cleared for farming.
       Livestock and other animals gather at such trees. The whole point of the bar, is as a love letter to Vermont and the Upper Valley.
       There are really dynamic, fun and unique flavors that exist in this region that people don't necessarily associate with cocktails,
       sumac as an example. Such ingredients will be used to infuse spirits or accompany spirits, to adulterate, showcase and highlight things for craft cocktails that are hopefully larger than the sum of their parts.
       So come around and join us at WolfTree.
-      </p>
+      </p>-->
+    </section>
+
+    <section class="music">
+    <h4>What We are Listening To: The Game by Milky Chance</h4>
+    <audio controls src="audio/TheGame.mp3"></audio>
     </section>
 
     <footer> <!--footer-->
