--- a/CS601_HW2_Jones/spotlight.html
+++ b/CS601_HW2_Jones/spotlight.html
@@ -46,7 +46,7 @@
     </article>
 
     <footer> <!--footer-->
-       <p>copyright	&copy; Paige Madeline Jones 2019</p>
+       <p id="footer__grid--middle">copyright	&copy; Paige Madeline Jones 2019</p>
     </footer>
   </body>
 
