--- a/CS601_HW2_Jones/about.html
+++ b/CS601_HW2_Jones/about.html
@@ -51,7 +51,7 @@
     </section>
 
     <footer> <!--footer-->
-       <p>copyright	&copy; Paige Madeline Jones 2019</p>
+       <p id="footer__grid--middle">copyright	&copy; Paige Madeline Jones 2019</p>
     </footer>
   </body>
 </html>
