--- a/CS601_HW2_Jones/findUs.html
+++ b/CS601_HW2_Jones/findUs.html
@@ -80,7 +80,7 @@
     </div> <!--closing tags-->
 
     <footer> <!--footer-->
-       <p>copyright	&copy; Paige Madeline Jones 2019</p>
+       <p id="footer__grid--middle">copyright	&copy; Paige Madeline Jones 2019</p>
     </footer>
 
   </body>
