--- a/CS601_HW2_Jones/menu.html
+++ b/CS601_HW2_Jones/menu.html
@@ -83,7 +83,7 @@
     </section>
 
     <footer> <!--footer-->
-       <p>copyright	&copy; Paige Madeline Jones 2019</p>
+       <p id="footer__grid--middle">copyright	&copy; Paige Madeline Jones 2019</p>
     </footer>
   </body>
 
