--- a/CS601_HW2_Jones/menu.html
+++ b/CS601_HW2_Jones/menu.html
@@ -13,14 +13,14 @@
   <body>
     <header> <!--Navigation Bar-->
       <nav class="navbar">  <!--will use css instead of align next week - just for vizual purposes today-->
-        <div id="navbar__grid--center">
+        <div id="navbar__grid--title">
         <a href="#" class="navbar__title">WOLF TREE</a>
-        <div>
+        </div>
+        <div id="navbar__grid--menu">
         <a class="navbar__link" href="about.html">ABOUT</a>
         <a class="navbar__link" href="menu.html">MENU</a>
         <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a>
         <a class="navbar__link" href="findUs.html">FIND US</a>
-        </div>
         </div>
 
         <div id="navbar__grid--right">
