--- a/CS601_HW2_Jones/findUs.html
+++ b/CS601_HW2_Jones/findUs.html
@@ -22,7 +22,6 @@
         <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a>
         <a class="navbar__link" href="findUs.html">FIND US</a>
         </div>
-
         <div id="navbar__grid--right">
         <a href="https://www.instagram.com/wolftreevt/">
           <img class="navbar__social" src="images/instagram.png" alt="instagram logo">
@@ -31,15 +30,14 @@
       </nav>
     </header>
 
-    <div>
+    <section class="findUs">
+    <div id="findUs__grid--right">
       <img src="images/nightWolfTree.jpeg" alt="picture of a wolf tree at night" width="700">
+    </div> <!--closing tags-->
 
-      <h1>Come on by for a drink</h1>
+    <div id="findUs__grid--left" class="hours">
       <table>  <!--define the table-->
-        <tr> <!--table row-->
-        <th>Days</th> <!-- table heading-->
-        <th>Hours</th>
-        </tr>
+        <h3>We'll Be Here</h3>
           <tr>
           <td>Monday</td> <!--table data-->
           <td>Closed</td>
@@ -70,14 +68,14 @@
         </tr>
       </table> <!--close table-->
 
-      <h2>Find your way here</h2>
+      <h3>Find your way</h3>
       <address>
         121 South Main Street,<br> White River Junction,<br> Vermont 05065
       </address>
       <h3>Give us a ring</h3>
       <a class="button" href="tel:802-356-7860">CALL US</a>  <!--using a link for click to call-->
-
-    </div> <!--closing tags-->
+      </section>
+      </div>
 
     <footer> <!--footer-->
        <p id="footer__grid--middle">copyright	&copy; Paige Madeline Jones 2019</p>
