work on menu page

--- a/CS601_HW2_Jones/menu.html
+++ b/CS601_HW2_Jones/menu.html
@@ -31,10 +31,10 @@
       </nav>
     </header>
 
-    <section> <!---trying out section instead of div-->
-      <h1>MENU</h1>
-      <img src="images/cocktail.jpeg" alt="picture of cucumber cocktail in a high ball glass" width="350">
-      <img src="images/ice.jpeg" alt="picture of bartender cutting ice cubes" width="350">
+    <section class="menu"> <!---trying out section instead of div-->
+      <h1 class="menu__eat" id="menu__grid--left">EAT</h1>
+      <h1 class="menu__drink" id="menu__grid--right">DRINK</h1>
+      </section>
 
       <p>
         Our kitchen & bar team is small, so our menu will grow as we do!
@@ -43,7 +43,6 @@
         Our menu changes often - check back weekly!
         <br><b>Menu for opening day, November 6 2019</b>
       </p>
-      </section>
 
       <section>
       <h3>Cocktails</h3>
