fix spotlight main

--- a/CS601_HW2_Jones/findUs.html
+++ b/CS601_HW2_Jones/findUs.html
@@ -32,7 +32,7 @@
 
     <section class="findUs">
     <div id="findUs__grid--right">
-      <img src="images/nightWolfTree.jpeg" alt="picture of a wolf tree at night" width="700">
+      <img src="images/manhattan.jpeg" alt="picture of a cocktail being poured" width="700">
     </div> <!--closing tags-->
 
     <div id="findUs__grid--left" class="hours">
