--- a/CS601_HW2_Jones/spotlight.html
+++ b/CS601_HW2_Jones/spotlight.html
@@ -22,7 +22,6 @@
         <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a>
         <a class="navbar__link" href="findUs.html">FIND US</a>
         </div>
-
         <div id="navbar__grid--right">
         <a href="https://www.instagram.com/wolftreevt/">
           <img class="navbar__social" src="images/instagram.png" alt="instagram logo">
@@ -31,19 +30,25 @@
       </nav>
     </header>
 
+     <section class="spotlight"> <!---trying out section instead of div-->
+       <h1 class="menu__eat" id="menu__grid--left">LOCALS</h1>
+       <h1 class="menu__drink" id="menu__grid--right">EVENTS</h1>
+     </section>
+
     <article>
-      <h1>Spotlight on Local Talent</h1>
-      <h3>Local legend Bar Hill Gin</h3>
-      <img src="images/barHill.jpeg" alt="picture of bar hill gin" width=350>
-      <blockquote>Made locally in Vermont and inspired by the views from atop the Barr Hill Nature Preserve. Our classic gin is filled with juniper-forward botanicals are brought to a perfect balance by the floral depth of the raw honey. - <a href="http://www.caledoniaspirits.com">Caledonia Spirits</a></blockquote>
-      <p>We will be serving all sorts of concoctions using this delightful liquor. If you haven't ventured up north yet - their new distillery in Montpelier is worth the trip.</p>
+        <h3>Local legend Bar Hill Gin</h3>
+        <blockquote>Made locally in Vermont and inspired by the views from atop the Barr Hill Nature Preserve. Our classic gin is filled with juniper-forward botanicals are brought to a perfect balance by the floral depth of the raw honey. - <a href="http://www.caledoniaspirits.com">Caledonia Spirits</a></blockquote>
+        <p>We will be serving all sorts of concoctions using this delightful liquor. If you haven't ventured up north yet - their new distillery in Montpelier is worth the trip.</p>
+        <img src="images/barHill.jpeg" alt="picture of bar hill gin" width=300>
     </article>
 
     <article>
-      <h1>Upcoming Events</h1>
+      <h3>Upcoming Events</h3>
       <h3>Friendsgiving 2019</h3>
       <p>Come out for a night of revelry on November 23rd 2019 to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</p>
     </article>
+
+
 
     <footer> <!--footer-->
        <p id="footer__grid--middle">copyright	&copy; Paige Madeline Jones 2019</p>
