--- a/CS601_HW2_Jones/spotlight.html
+++ b/CS601_HW2_Jones/spotlight.html
@@ -36,6 +36,7 @@
      </section>
 
     <article>
+        <h3>Spotlight</h3>
         <h3>Local legend Bar Hill Gin</h3>
         <blockquote>Made locally in Vermont and inspired by the views from atop the Barr Hill Nature Preserve. Our classic gin is filled with juniper-forward botanicals are brought to a perfect balance by the floral depth of the raw honey. - <a href="http://www.caledoniaspirits.com">Caledonia Spirits</a></blockquote>
         <p>We will be serving all sorts of concoctions using this delightful liquor. If you haven't ventured up north yet - their new distillery in Montpelier is worth the trip.</p>
@@ -46,6 +47,7 @@
       <h3>Upcoming Events</h3>
       <h3>Friendsgiving 2019</h3>
       <p>Come out for a night of revelry on November 23rd 2019 to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</p>
+      <img src="images/Friendsgiving.jpeg" alt="picture of seasonal cocktail" width=300>
     </article>
 
 
