work on menu layout

--- a/CS601_HW2_Jones/menu.html
+++ b/CS601_HW2_Jones/menu.html
@@ -32,35 +32,31 @@
     </header>
 
     <section class="menu"> <!---trying out section instead of div-->
-      <a href="#drinks__grid--left" class="menu__eat" id="menu__grid--left">EAT</a>   <!--trying out links to sections-->
-      <a href="#eat__grid--center" class="menu__drink" id="menu__grid--right">DRINK</a>
+      <a href="#eat__grid--center" class="menu__eat" id="menu__grid--left">EAT</a>   <!--trying out links to sections-->
+      <a href="#drinks__grid--center" class="menu__drink" id="menu__grid--right">DRINK</a>
     </section>
 
       <section class="drinks">
         <ul id="drinks__grid--left">  <!--unfortunately without css I wasnt able to center this content without the bullet acting wierd-->
-        <h3>- Cocktails -</h3>
-        <li>Moscow Mule</li>
-        <li>Pimms Cup</li>
-        <li>Cucumber Gimlet</li>
-        <li>White Mountain</li>
-        <li>Liberation Libation</li>
-        <li>Old Fashioned</li>
-        <li>Manhattan</li>
-        </ul>
-
-
+          <h3>- Cocktails -</h3>
+          <li>Moscow Mule</li>
+          <li>Pimms Cup</li>
+          <li>Cucumber Gimlet</li>
+          <li>White Mountain</li>
+          <li>Liberation Libation</li>
+          <li>Old Fashioned</li>
+          <li>Manhattan</li>
+          </ul>
         <ul id="drinks__grid--center">
-        <h3>- Beer -</h3>
-        <li>Wild Child - The Alchemist</li>
-        <li>India Pale - Sierra Nevada</li>
-        <li>Prospect - Foley Brothers</li>
-        <li>Marie - Hill Farmstead</li>
-        <li>Lush - Frost Beer Works</li>
-        <li>Strawberry-Rhubarb Fleur de Lis</li>
-        <li>Cloud Drop - Upper Pass</li>
-        </ul>
-
-
+          <h3>- Beer -</h3>
+          <li>Wild Child - The Alchemist</li>
+          <li>India Pale - Sierra Nevada</li>
+          <li>Prospect - Foley Brothers</li>
+          <li>Marie - Hill Farmstead</li>
+          <li>Lush - Frost Beer Works</li>
+          <li>Strawberry-Rhubarb Fleur de Lis</li>
+          <li>Cloud Drop - Upper Pass</li>
+          </ul>
         <ul id="drinks__grid--right">
         <h3>- Cider -</h3>
         <li>Wild Child - The Alchemist</li>
@@ -83,14 +79,14 @@
         <li>Bruschetta - Tomato Reduction base, Mozzarella, Torn Basil, Olive Oil</li>
         <li>Bavarian Pretzel - Cheddar Ale Dip, Mustard</li>
         <li>Siracha Popcorn - Tangy, Butter & Salt</li>
-        </ul>
-        <p>
+        <h3>- SCRATCH-</h3>
+        <li class="scratch">
         Our kitchen & bar team is small, so our menu will grow as we do!
         Either way there will be something new each week. We are committed to buying our ingredients responsibly from producers,
         local farms and companies that care about the people and our planet that makes this all possible.
         Our menu changes often - check back weekly!
-        <br><b>Menu for opening day, November 6 2019</b>
-        </p>
+        </li>
+        </ul>
       </section>
 
     <footer> <!--footer-->
