--- a/CS601_HW2_Jones/index.html
+++ b/CS601_HW2_Jones/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html> <!--for html5-->
 
 <html lang="en"> <!--set language to english-->
-  <head>
-    <title>WolfTree</title> <!--shows up in browser title bar-->
-    <!--link to CSS-->
-    <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
-    <link rel="stylesheet" type="text/css" media="print" href="styles/print.css">
-    <!---Link to google fonts--->
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Raleway:300,400&display=swap" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>WolfTree</title> <!--shows up in browser title bar-->
+  <!--link to CSS-->
+  <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
+  <link rel="stylesheet" type="text/css" media="print" href="styles/print.css">
+  <!---Link to google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300&display=swap" rel="stylesheet">
+</head>
 
   <body>
 
@@ -18,7 +20,7 @@
         <a href="#" class="navbar__title">WOLF TREE</a>
         </div>
         <div id="navbar__grid--menu">
-        <a class="navbar__link" href="about.html">ABOUT</a>
+        <a class="navbar__link" href="index.html">ABOUT</a>
         <a class="navbar__link" href="menu.html">MENU</a>
         <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a>
         <a class="navbar__link" href="findUs.html">FIND US</a>
@@ -34,8 +36,8 @@
 
     <section class="intro">
       <h1 id="intro__grid--top">The New Bar In Town</h1>
-      <a class="button" id="intro__grid--bottom" href="tel:802-356-7860">ORIGIN STORY</a>  <!--using a link for click to call-->
-<!--paragraph 1
+      <a class="button" id="intro__grid--bottom" href="#">ORIGIN STORY</a>  <!--using a link for click to call-->
+      <!--paragraph 1 this is not coded to work yet as I think javascript will be needed to create a popup box that isnt a whole new page
       <p>
       A "wolf tree" is the lone tree that remains after most of the forest has been cleared for farming.
       Livestock and other animals gather at such trees. The whole point of the bar, is as a love letter to Vermont and the Upper Valley.
