--- a/CS601_HW2_Jones/spotlight.html
+++ b/CS601_HW2_Jones/spotlight.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html> <!--for html5-->
 
 <html lang="en"> <!--set language to english-->
-  <head>
-    <title>WolfTree</title> <!--shows up in browser title bar-->
-    <!--link to CSS-->
-    <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
-    <link rel="stylesheet" type="text/css" media="print" href="styles/print.css">
-    <!---Link to google fonts--->
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Raleway:300,400&display=swap" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>WolfTree</title> <!--shows up in browser title bar-->
+  <!--link to CSS-->
+  <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
+  <link rel="stylesheet" type="text/css" media="print" href="styles/print.css">
+  <!---Link to google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300&display=swap" rel="stylesheet">
+</head>
 
   <body>
     <header> <!--Navigation Bar-->
@@ -17,7 +19,7 @@
         <a href="#" class="navbar__title">WOLF TREE</a>
         </div>
         <div id="navbar__grid--menu">
-        <a class="navbar__link" href="about.html">ABOUT</a>
+        <a class="navbar__link" href="index.html">ABOUT</a>
         <a class="navbar__link" href="menu.html">MENU</a>
         <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a>
         <a class="navbar__link" href="findUs.html">FIND US</a>
@@ -50,7 +52,7 @@
       <img src="images/Friendsgiving.jpeg" alt="picture of seasonal cocktail" width=300>
     </article>
 
-
+    <p class="print__only">Events updated on November 11 2019. Please see http://www.wolftree.com for the most recent calendar.</p>
 
     <footer> <!--footer-->
        <p id="footer__grid--middle">copyright	&copy; Paige Madeline Jones 2019</p>
