--- a/CS601_HW2_Jones/findUs.html
+++ b/CS601_HW2_Jones/findUs.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html> <!--for html5-->
 
 <html lang="en"> <!--set language to english-->
-  <head>
-    <title>WolfTree</title> <!--shows up in browser title bar-->
-    <!--link to CSS-->
-    <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
-    <link rel="stylesheet" type="text/css" media="print" href="styles/print.css">
-    <!---Link to google fonts--->
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Raleway:300,400&display=swap" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>WolfTree</title> <!--shows up in browser title bar-->
+  <!--link to CSS-->
+  <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
+  <link rel="stylesheet" type="text/css" media="print" href="styles/print.css">
+  <!---Link to google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300&display=swap" rel="stylesheet">
+</head>
 
   <body>
     <header> <!--Navigation Bar-->
@@ -17,7 +19,7 @@
         <a href="#" class="navbar__title">WOLF TREE</a>
         </div>
         <div id="navbar__grid--menu">
-        <a class="navbar__link" href="about.html">ABOUT</a>
+        <a class="navbar__link" href="index.html">ABOUT</a>
         <a class="navbar__link" href="menu.html">MENU</a>
         <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a>
         <a class="navbar__link" href="findUs.html">FIND US</a>
@@ -36,8 +38,8 @@
     </div> <!--closing tags-->
 
     <div id="findUs__grid--left" class="hours">
+      <h3>We'll be here</h3>
       <table>  <!--define the table-->
-        <h3>We'll Be Here</h3>
           <tr>
           <td>Monday</td> <!--table data-->
           <td>Closed</td>
@@ -74,8 +76,9 @@
       </address>
       <h3>Give us a ring</h3>
       <a class="button" href="tel:802-356-7860">CALL US</a>  <!--using a link for click to call-->
-      </section>
       </div>
+      </section>
+
 
     <footer> <!--footer-->
        <p id="footer__grid--middle">copyright	&copy; Paige Madeline Jones 2019</p>
