add form fields

--- a/CS601_HW4_Jones/index.html
+++ b/CS601_HW4_Jones/index.html
@@ -14,13 +14,19 @@
   <section>
   <!--THE FORM-->
   <form action="">
+    <fieldset>
+    <!--FORM TITLE-->
     <legend>My Form</legend>
+    <!--FORM FIELDS-->
     <label for="firstName">First Name:</label>
-    <input type="text" id="" name"FirstyNamey">
+    <input type="text" id="firstName" name="FirstyNamey" required>
     <label for="lastName">Last Name:</label>
-    <input type="text" id="" name"LastyNamey">
+    <input type="text" id="lastName" name="LastyNamey" required>
     <label for="facilitator">Facilitator: </label>
-    <input type="text" id="" name"Facilily">
+    <input type="text" id="facilitator" name="Facilily" required>
+    <!--SUBMIT-->
+    <input type="submit" value="">
+    </fieldset>
   </form>
 
   </section>
