add check boxes

--- a/CS601_HW4_Jones/index.html
+++ b/CS601_HW4_Jones/index.html
@@ -24,8 +24,25 @@
     <input type="text" id="lastName" name="LastyNamey" required>
     <label for="facilitator">Facilitator: </label>
     <input type="text" id="facilitator" name="Facilily" required>
+
+    <br><br>
+    <!--FORM FIELDS-->
+    <label for="">What is your favorite type of drink to order out?</label>
+    <label><input type="checkbox">Beer</label>
+    <label><input type="checkbox">Cocktail</label>
+    <label><input type="checkbox">Red Wine</label>
+    <label><input type="checkbox">Rose</label>
+    <label><input type="checkbox">White Wine</label>
+    <label><input type="checkbox">Champagne</label>
+    <label><input type="checkbox">Non-alcoholic</label>
+
+    <br><br>
+
+
+    
+    <br><br>
     <!--SUBMIT-->
-    <input type="submit" value="">
+    <input type="submit" value="Send">
     </fieldset>
   </form>
 
