style form content

--- a/CS601_HW4_Jones/index.html
+++ b/CS601_HW4_Jones/index.html
@@ -16,33 +16,33 @@
   <form action="post">
     <fieldset>
     <!--FORM TITLE-->
-    <legend class="form__title">My Form</legend>
+    <legend class="form__title">Tell Us What You Think</legend>
     <!--FORM FIELDS-->
-    <label for="firstName">First Name:</label>
-    <input type="text" id="firstName" name="FirstyNamey" required>
-    <label for="lastName">Last Name:</label>
-    <input type="text" id="lastName" name="LastyNamey" required>
-    <label for="facilitator">Facilitator: </label>
-    <input type="text" id="facilitator" name="Facilily" required>
+    <label for="firstName" class="form__h2">First Name:
+    <input type="text" id="firstName" required></label>
+    <label for="lastName" class="form__h2">Last Name:
+    <input type="text" id="lastName" required></label>
+    <label for="facilitator" class="form__h2">Facilitator: 
+    <input type="text" id="facilitator" required></label>
 
     <br><br>
     <!--Checkboxes-->
-    <label for="">What is your favorite type of drink to order out?</label>
-    <label class="input"><input type="checkbox">Beer</label>
-    <label class="input"><input type="checkbox">Cocktail</label>
-    <label class="input"><input type="checkbox">Red Wine</label>
-    <label class="input"><input type="checkbox">Rose</label>
-    <label class="input"><input type="checkbox">White Wine</label>
-    <label class="input"><input type="checkbox">Champagne</label>
-    <label class="input"><input type="checkbox">Non-alcoholic</label>
+    <label class="form__h2">What is your favorite type of drink to order out?</label>
+    <label class="input"><input type="checkbox"> Beer</label>
+    <label class="input"><input type="checkbox"> Cocktail</label>
+    <label class="input"><input type="checkbox"> Red Wine</label>
+    <label class="input"><input type="checkbox"> Rose</label>
+    <label class="input"><input type="checkbox"> White Wine</label>
+    <label class="input"><input type="checkbox"> Champagne</label>
+    <label class="input"><input type="checkbox"> Non-alcoholic</label>
 
     <br><br>
     <!--Radio Buttons-->
-    <label for="">What kind of themes interest you most in a drink menu?</label>
-    <label class="input"><input type="radio" name="" value="seasonal" id="">Holiday/Seasonal</label>
-    <label class="input"><input type="radio" name="" value="seasonal" id="">Tropical</label>
-    <label class="input"><input type="radio" name="" value="seasonal" id="">Local Ingredients</label>
-    <label class="input"><input type="radio" name="" value="seasonal" id="">Tasting Flights</label>
+    <label for="" class="form__h2">What kind of themes interest you most in a drink menu?</label>
+    <label class="input"><input type="radio" name="" value="seasonal" id=""> Holiday/Seasonal</label>
+    <label class="input"><input type="radio" name="" value="seasonal" id=""> Tropical</label>
+    <label class="input"><input type="radio" name="" value="seasonal" id=""> Local Ingredients</label>
+    <label class="input"><input type="radio" name="" value="seasonal" id=""> Tasting Flights</label>
 
     <br><br>
     <!--SUBMIT-->
