--- a/CS601_HW4_Jones/index.html
+++ b/CS601_HW4_Jones/index.html
@@ -13,7 +13,7 @@
 
   <section class="form">
   <!--THE FORM-->
-  <form action="post">
+  <form method="post" action="/phpgoeshere">
     <fieldset>
     <!--FORM TITLE-->
     <legend class="form__title">Tell Us What You Think</legend>
@@ -35,10 +35,10 @@
     <label class="input"><input type="checkbox"> Beer</label>
     <label class="input"><input type="checkbox"> Cocktail</label>
     <label class="input"><input type="checkbox"> Red Wine</label>
-    <label class="input"><input type="checkbox"> Rose</label>
+    <label class="input"><input type="checkbox"> Rosé</label>
     <label class="input"><input type="checkbox"> White Wine</label>
     <label class="input"><input type="checkbox"> Champagne</label>
-    <label class="input"><input type="checkbox"> Non-alcoholic</label>
+    <label class="input"><input type="checkbox"> Non-Alcoholic</label>
     </section>
 
     <!--Radio Buttons-->
