work on form validation with javascript - following textbook exampkle

--- a/CS601_HW4_Jones/index.html
+++ b/CS601_HW4_Jones/index.html
@@ -50,6 +50,13 @@
     <label class="input"><input type="radio" name="" value="seasonal" id=""> Tasting Flights</label>
     </section>
 
+    <section class="form__section">
+      <div class="bio">
+        <label class="form__h2" for="bio">If we designed a cocktail to describe you what would be in it?
+        <textarea name="bio" id="bio" cols="30" rows="10"></textarea></label>
+      </div>
+    </section>
+
     <!--SUBMIT-->
     <label><input type="submit" value="Send" class="form__button"></label>
     </fieldset>
